[gd_scene load_steps=2 format=3 uid="uid://bfvylhj2l1r48"]

[ext_resource type="Script" uid="uid://n7idrplgthb4" path="res://scripts/field_window.gd" id="1_jr8j1"]

[node name="FieldWindow" type="Window"]
auto_translate_mode = 1
title = "New Field"
initial_position = 2
size = Vector2i(200, 200)
transient = true
popup_window = true
script = ExtResource("1_jr8j1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NameContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TypeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/TypeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Type"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/TypeContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
popup/item_0/text = "int"
popup/item_0/id = 0
popup/item_1/text = "float"
popup/item_1/id = 1

[node name="RequiredContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/RequiredContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Required"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/RequiredContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="AddButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Add"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="VBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
